--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = Pycaro
-version = attr: sqlalchemy.__version__
+version = attr: pycaro.__version__
 description = Unbound variables detection
 long_description = file: README.md
 long_description_content_type = text/markdown
